# billing

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  README.md
config/: base.toml  development.toml  k8s.toml
diesel_macro_derive/: Cargo.toml
diesel_macro_derive/src/: lib.rs
docker/: Dockerfile.billing  Dockerfile.run  docker-compose.yml
migrations/2018-07-04-090000_create_roles/: up.sql
migrations/2018-07-04-100000_add_superuser/: down.sql  up.sql
migrations/2018-07-04-125320_create_orders_info/: down.sql  up.sql
migrations/2018-07-09-100020_create_merchants/: down.sql  up.sql
migrations/2018-07-09-100030_create_invoices/: down.sql  up.sql
migrations/2019-07-10-163600_update_orders_info/: down.sql  up.sql
migrations/2019-07-17-143600_update_orders_info/: down.sql  up.sql
migrations/2019-07-17-184000_update_orders_info/: down.sql  up.sql
migrations/2019-07-18-174300_update_invoices/: down.sql  up.sql
migrations/2019-07-25-124300_update_invoices/: down.sql  up.sql
migrations/2019-08-22-000000_currency_improvements/: down.sql  up.sql
migrations/2019-10-29-113241_update_orders_info/: down.sql  up.sql
migrations/2019-12-17-104946_create_tables_for_payments_integration/: down.sql  up.sql
migrations/2019-12-19-091524_currency_amount_numeric_type/: down.sql  up.sql
migrations/2019-12-20-124213_add_user_to_invoice/: down.sql  up.sql
migrations/2019-12-20-151617_bigserial_id_for_order_exchange_rates/: down.sql  up.sql
migrations/2019-12-24-120758_add_status_and_wallet_to_invoice/: down.sql  up.sql
migrations/2019-12-24-162341_add_store_id_to_orders_v2/: down.sql  up.sql
migrations/2019-12-25-110743_add_missing_fields/: down.sql  up.sql
migrations/2019-12-27-200708_fix_fk_on_orders/: up.sql
migrations/2019-12-28-155350_create_amounts_received/: down.sql  up.sql
migrations/2019-a-01-09-085245_add_event_store/: down.sql  up.sql
migrations/2019-a-01-15-080443_create_payment_intent/: down.sql  up.sql
migrations/2019-a-01-16-080355_create_stripe_customer/: down.sql  up.sql
migrations/2019-a-01-17-074647_update_orders_state/: down.sql  up.sql
migrations/2019-a-01-18-074744_update_orders_state_fix/: up.sql
migrations/2019-a-01-21-111929_add_store_billing_type/: down.sql  up.sql
migrations/2019-a-01-21-122720_international_billing_info/: down.sql  up.sql
migrations/2019-a-01-21-140203_add_russia_billing_info/: down.sql  up.sql
migrations/2019-a-01-22-082208_add_proxy_companies_billing_info/: down.sql  up.sql
migrations/2019-a-01-23-050855_update_customers/: down.sql  up.sql
migrations/2019-a-01-24-090119_update_proxy_companies_billing_info/: down.sql  up.sql
migrations/2019-a-01-24-121621_create_fee_table/: down.sql  up.sql
migrations/2019-a-01-25-081453_create_payment_intent_invoice/: down.sql  up.sql
migrations/2019-a-01-28-072457_create_payment_intent_fee/: down.sql  up.sql
migrations/2019-a-01-28-074619_update_fees/: down.sql  up.sql
migrations/2019-a-01-28-145014_change_billing_info/: down.sql  up.sql
migrations/2019-a-01-30-042545_update_fees/: down.sql  up.sql
migrations/2019-a-01-31-111919_add_scheduled_on_field_to_event_store/: down.sql  up.sql
migrations/2019-a-02-01-151925_update_orders_stripe_fee/: down.sql  up.sql
migrations/2019-a-02-02-000000-update_fees/: down.sql  up.sql
migrations/2019-a-02-05-091112_add_user_wallets/: down.sql  up.sql
migrations/2019-a-02-05-133151_add_payouts/: down.sql  up.sql
migrations/2019-a-02-06-143133_remake_payouts_tables/: down.sql  up.sql
migrations/2019-a-02-07-142134_update_accounts/: down.sql  up.sql
migrations/2019-a-02-27-083619_create_subscription/: down.sql  up.sql
migrations/2019-a-03-01-111636_update_store_subscription/: down.sql  up.sql
migrations/2019-a-03-04-110955_update_store_subscription/: down.sql  up.sql
src/: config.rs  errors.rs  lib.rs  macros.rs  main.rs  schema.rs  stripe_integration.rs
src/client/: mod.rs
src/controller/: context.rs  mod.rs  (+1 more)
subscriptions/: Cargo.toml
subscriptions/config/: base.toml
subscriptions/src/: billing.rs  config.rs  main.rs  stores.rs
tests/: accounts_repo.rs  invoices_v2_repo.rs  payments_client.rs
(+117 files in other folders)
