[package]
name = "subscriptions"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "subscriptions"
path = "src/main.rs"

[dependencies]
config = { version = "0.9", default-features = false, features = ["toml"] }
failure = "0.1.1"
futures = "0.1.17"
log = "0.4"
env_logger = "0.6"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.11"
tokio-core = "0.1"
tokio-signal = "0.2.6"
stq_http = { path = "../vendor/libstqbackend/http" }
